--- a/ReactNative/Aula01/primeiro-app/package.json
+++ b/ReactNative/Aula01/primeiro-app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-material/core": "^1.3.7",
@@ -17,6 +18,7 @@
     "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.8",
     "expo-constants": "~14.4.2",
+    "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
@@ -24,13 +26,16 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "^3.5.2",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-native-view-shot": "3.7.0",
+    "expo-media-library": "~15.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
   },
   "private": true
 }
